Fixed Link Format hasObservable() and improved getTitle().